--- a/frontend/app/src/main/res/values/themes.xml
+++ b/frontend/app/src/main/res/values/themes.xml
@@ -2,9 +2,11 @@
     <!-- Base application theme. -->
     <style name="Theme.Slt_App" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimary">@color/colorMarron</item>
+        <item name="colorPrimaryVariant">@color/colorBeige2</item>
         <item name="colorOnPrimary">@color/white</item>
+        <item name="colorPrimaryDark">@color/colorMarron2</item>
+        <item name="colorAccent">@color/colorBeige</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
