--- a/frontend/app/src/main/res/layout/model_act.xml
+++ b/frontend/app/src/main/res/layout/model_act.xml
@@ -19,8 +19,8 @@
 
     <ListView
         android:id="@+id/l1"
-        android:layout_width="409dp"
-        android:layout_height="354dp"
+        android:layout_width="419dp"
+        android:layout_height="280dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -36,4 +36,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/l1" />
+
+    <Button
+        android:id="@+id/boutton_lire"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="lire"
+        android:text="valider"
+        app:layout_constraintBottom_toTopOf="@+id/btn_model"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/l1" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
